Bug Fixes
BUG FIXES:
1. [FIXED] License message shuffling wasn't working

2. [FIXED] Socials button is overlapping with the "No" button whenever the "No" button is randomly placed at the exact position of the socials button

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
     margin: 0.4vw 0.2vw;
     cursor: pointer;
     border-radius: 10px;
+    z-index: 10;
 }
 .button1 {
     transition: 0.5s;
